# dronity_

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_DETAILS.md  README.md  glossary.md
.github/: PULL_REQUEST_TEMPLATE.md
backend/: pyproject.toml
backend/src/app/: __init__.py  main.py
backend/tests/: test_health.py
desktop/: CMakeLists.txt
desktop/build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  verity_desktop.sln  verity_desktop.vcxproj  verity_desktop.vcxproj.filters  verity_desktop_runner.vcxproj  verity_desktop_runner.vcxproj.filters  verity_qt_shell.vcxproj  verity_qt_shell.vcxproj.filters
desktop/build-msvc/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
desktop/build-msvc/Release/: verity_desktop.lib
desktop/build-msvc/engine_ext/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  verity_engine.sln  verity_engine.vcxproj  verity_engine.vcxproj.filters
desktop/build-msvc/engine_ext/Release/: verity_engine.lib
desktop/build-msvc/engine_ext/verity_engine.dir/Release/: verity_engine.lib.recipe
desktop/build-msvc/verity_desktop.dir/Release/verity_desktop.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
desktop/build-msvc/verity_desktop_runner.dir/Release/: verity_desktop_runner.exe.recipe
desktop/build-msvc/verity_desktop_runner.dir/Release/verity_d.76B8CD38.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
desktop/build-msvc/verity_qt_shell.dir/Release/: verity_qt_shell.exe.recipe
desktop/build-msvc/verity_qt_shell.dir/Release/verity_qt_shell.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
desktop/build-msvc/verity_qt_shell_autogen/: mocs_compilation_Release.cpp
desktop/build-msvc/verity_qt_shell_autogen/include_Release/ECEH3FSZ54/: moc_ViewportWidget.cpp  moc_ViewportWidget.cpp.d
desktop/build-msvc/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
desktop/include/commands/: add_keyframe.hpp  move_selection.hpp
desktop/include/verity/: autosave.hpp  command.hpp  db.hpp  replay.hpp
desktop/include/viewport/: ViewportWidget.hpp
desktop/schema/: schema.sql
desktop/schema/migrations/: V0001__init.sql
desktop/src/: autosave.cpp  command.cpp  db.cpp  desktop_runner.cpp  main.cpp  main_qt.cpp  replay.cpp
desktop/src/commands/: add_keyframe.cpp  add_keyframe.hpp  move_selection.cpp
desktop/src/viewport/: ViewportWidget.cpp
desktop/tests/: commands_tests.cpp
engine/: CMakeLists.txt
engine/bench/: curve_bench.cpp
engine/include/verity/: engine.hpp
engine/src/: engine.cpp
engine/tests/: engine_tests.cpp
scripts/: e2e_step3.ps1  e2e_step3.sh  (+3 more)
(+30 files in other folders)
