[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verity-backend"
version = "0.0.1"
description = "Verity backend (FastAPI) skeleton"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5.0",
  "black>=23.9.1",
  "pip-audit>=2.7.0",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E","F","W","I","UP","S","B","C4","SIM","ERA","Q","PL",
]
ignore = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
